--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "openai-php/laravel": "^0.16.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
