--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "lucide-react": "^0.539.0"
+        "lucide-react": "^0.539.0",
+        "next-themes": "^0.4.6",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1"
     }
 }
