--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.539.0",
         "next-themes": "^0.4.6",
+        "react-router-dom": "^7.9.5",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
